--- a/Main/Pages/styles.css
+++ b/Main/Pages/styles.css
@@ -1,89 +1,484 @@
-body {
-    font-family: Arial, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: "Source Sans Pro", sans-serif;
 }
 
-header {
-    position: fixed;
+html,
+body {
+    overflow-x: hidden;
+}
+
+/*Logo design starts*/
+.logo {
+    margin: 10px 0 0 30px;
+    float: left;
+}
+
+/*Logo design ends*/
+/*Navigation design starts*/
+#navigation {
     width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    z-index: 2;
-    position: fixed;
+    height: 9.5vh;
+    list-style: none;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
+.nav-links .left {
+    margin-left: 30px;
+    width: 50%;
 }
 
-nav ul li {
+.left a:hover {
+    color: #04aa6d;
+}
+
+.nav-links {
+    float: left;
+}
+
+.nav-links ul {
+    padding: 25px 0;
+}
+
+.nav-links li {
     display: inline;
-    margin-right: 10px;
 }
 
-nav ul li a {
-    color: white;
+.nav-links a {
     text-decoration: none;
+    color: #000;
+    padding: 0 15px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-main {
-    padding-top: 25vh;
-    
+#btn {
+    color: #000;
+    background-color: #fff;
+    padding: 2px 10px;
+    margin-left: 5px;
+    border: 1px solid #000;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
-#home {
+.right {
+    float: right;
+}
+
+.right ul {
+    padding: 16px 0;
+}
+
+#menu {
+    display: none;
+}
+
+#web {
+    background-color: #ffc0cb;
+    padding: 10px 13px;
+    border-radius: 20px;
+}
+
+.right .paid {
+    padding: 10px 20px;
+    border-radius: 25px;
+}
+
+.right .paid:hover {
+    background-color: #04aa6d;
+    color: #fff;
+}
+
+#btn-primary {
+    background-color: #04aa6d;
+    color: #fff;
+    padding: 12px 40px;
+    font-size: 15px;
+    border: none;
+    font-weight: bold;
+    border-radius: 20px;
+}
+
+#btn-primary:hover {
+    background-color: #058e5c;
+}
+
+.right-content,
+.fa-circle-half-stroke:hover,
+.fa-earth-americas:hover,
+.fa-magnifying-glass:hover {
+    color: #04aa6d;
+}
+
+.right li #web:hover {
+    color: #fff;
+    background-color: #04aa6d;
+}
+
+/*Navigation design ends*/
+/*Body design starts*/
+#body-content {
+    background: #282a35 !important;
+    width: 100%;
+    height: auto;
+}
+
+.main-head {
+    padding-top: 80px;
+}
+
+.main-head h1 {
+    color: #fff;
+    font-size: 75px;
+    margin-top: 20px;
+    text-align: center;
+    font-family: "Segoe UI", Arial, sans-serif;
+}
+
+.main-head h3 {
+    color: #ffc0c7;
+    font-size: 24px;
+    letter-spacing: 1px;
+    text-align: center;
+    margin-top: 28px;
+}
+
+.main-head .search {
+    position: absolute;
+    left: 45%;
+    padding: 30px 0;
+}
+
+.main-head h4 {
+    color: white;
+    font-size: 25px;
+    font-weight: 700;
+    margin-top: 40px;
+    text-decoration: underline;
+    text-align: center;
+    letter-spacing: 1.5px;
+}
+
+.search-container {
+    position: relative;
+    left: 35%;
+    margin-top: 30px;
+}
+
+.search-container input[type="text"] {
+    width: 30%;
+    padding: 14px;
+    margin-top: 8px;
+    font-size: 20px;
+    border: none;
+    border-radius: 25px;
+}
+
+.search-container button {
+    padding: 14px 35px;
+    margin-left: -90px;
+    background: #04aa6d;
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 0 25px 25px 0;
+}
+
+::placeholder {
+    font-weight: 600;
+}
+
+/*Body design ends*/
+/*htmldesign starts*/
+/*Same height for body section design starts*/
+#html,
+#css,
+#javascript,
+#python,
+#sql {
+    height: auto;
+    display: flex;
+}
+
+/*Same height for body section design ends*/
+#html {
+    margin-top: -20px;
+    background-color: #d9eee1;
+}
+
+.left-content {
+    width: 50%;
+    text-align: center;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.left-content h1 {
+    font-family: "Segoe UI", Arial, sans-serif;
+    font-size: 80px;
+    font-weight: 700;
+    margin-top: 80px;
+    margin-left: 5px;
+}
+
+.left-content p {
+    font-size: 19px;
+    margin-top: 1em;
+    margin-bottom: 1.2em;
+    letter-spacing: 1.5px;
+    font-weight: 600;
+    margin-left: 0px;
+}
+
+/* Ensure the parent container centers its children */
+/* Center the content in the middle of the page */
+.left-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-}
-
-footer {
-    background-color: #f1f1f1;
     text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    margin: auto;
+    height: 100vh;
+    /* Full viewport height */
+    justify-content: center;
+    /* Center vertically */
 }
 
-.side-navbar {
-    position: fixed;
-    height: 100%;
-    width: 25vh;
-    position: fixed;
-    top: 15.5vh;
-    left: 0;
-    background-color: #454544;
-    padding-top: 20px;
-    z-index: 0;
-}
-
-.side-navbar ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.side-navbar li {
-    padding: 8px;
-    text-align: left;
-}
-
-.side-navbar li a {
+#btn-A,
+#btn-B,
+#btn-C {
     display: block;
+    width: 230px;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    border-radius: 25px;
+    margin: 10px 0;
+    /* Space between buttons */
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.left-content #btn-A {
+    background-color: #F4AC45;
     color: white;
+    align-items: center;
+}
+
+.left-content #btn-A:hover {
+    background-color: #387D7A;
+}
+
+.left-content #btn-B {
+    background-color: #CFB3CD;
+    color: #000;
+    position: relative;
+}
+
+.left-content #btn-B:hover {
+    background-color: #888098;
+}
+
+.ws-pink {
+    background-color: #F4AC45;
+    font-size: 14px;
+    padding: 8px 15px;
+    border-radius: 25px;
+    text-transform: uppercase;
+    position: absolute;
+    left: -20px;
+    top: -10px;
+    transform: rotate(-20deg);
+}
+
+.left-content #btn-C {
+    background-color: #565676;
+    color: #fff;
+}
+
+.left-content #btn-C:hover {
+    background-color: #1c1d22;
+}
+
+.right-content {
+    width: 40%;
+    height: 70%;
+    background-color: #e7e9eb;
+    margin-top: 90px;
+    margin-bottom: 140px;
+    padding-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+#html.right-content,
+#css .right-content,
+#javascript .right-content {
+    margin-bottom: 100px;
+}
+
+.right-content h3 {
+    font-size: 24px;
+    font-family: "Segoe UI", Arial, sans-serif;
+    font-weight: 500;
+    margin: 30px 0 0 30px;
+}
+
+.white-space {
+    width: 92%;
+    height: 60%;
+    background-color: #fff;
+    margin: 20px 60px 0 30px;
+    padding: 10px 20px;
+    border-left: 5px solid #04aa5d;
+}
+
+.white-space p {
+    font-size: 17px;
+    font-family: Consolas, Menlo, "courier new", monospace;
+    letter-spacing: 1px;
+    color: mediumblue;
+}
+
+.btn-down {
+    margin: 20px 0 0 40px;
+}
+
+.btn-down #btn-down {
+    background-color: #04aa6d;
+    color: #fff;
+    width: 180px;
+    font-size: 18px;
+    font-family: "Segoe UI", Arial, sans-serif;
+    font-weight: 600;
+    padding: 12px 16px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.btn-down #btn-down:hover {
+    background-color: #058e5c;
+}
+
+/*htmldesign ends*/
+
+/* w3 course start  */
+.w3-course-panel {
+    padding-bottom: 64px;
+    position: relative;
+    padding: 0 60px 50px 60px;
+    background-color: #282A35;
+    color: #FFC0C7;
+    font-family: 'Source Sans Pro', sans-serif;
+    width: 100%;
+    margin: 0;
+}
+
+.w3-course-panel h2 {
+    font-size: 62px;
+    font-family: 'Source Sans Pro', sans-serif;
+    padding-top: 80px;
+}
+
+.w3-course-panel p {
+    font-size: 52px;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-family: 'Source Sans Pro', sans-serif;
+    padding-top: 40px;
+}
+
+.w3-course-panel a {
+    border-radius: 50px;
+    font-size: 18px;
+    background-color: #04AA6D;
+    padding: 17px 55px;
     text-decoration: none;
+    color: #D9EEE1;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    margin-bottom: 16px !important;
+    display: inline-block;
 }
 
-.side-navbar li a:hover {
-    background-color: #575757;
+.w3-course-panel a:hover {
+    background-color: #058556;
 }
 
-.main{
-    border: 2px solid red;
-    margin-left: 25vh;
+#w3_cert_arrow {
+    position: absolute;
+    right: 240px;
+    width: 220px;
+    transform: rotate(10deg);
+    bottom: 0;
+    z-index: 1;
+    display: block;
+    padding-right: 80px;
+}
+
+#w3_cert_badge {
+    position: absolute;
+    right: 10%;
+    width: 220px;
+    transform: rotate(10deg);
+    bottom: -15%;
+}
+
+/* w3 course end  */
+/*Footer design starts*/
+footer {
+    background-color: #282a35 !important;
+    width: 100%;
+    height: auto;
+}
+
+.main-footer {
+    display: flex;
+    width: 100%;
+    padding: 40px 0 50px 30px;
+}
+
+.footer-left .footerbtn {
+    border: none;
+    background-color: #ffff;
+    padding: 8px 16px;
+    border-radius: 5px;
+    margin-right: 10px;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.footer-right {
+    display: flex;
+    flex: 5;
+    font-size: 20px;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.footer-paragraph {
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
 }
