A new Code Editor feature is added

--- a/Main/Pages/page.css
+++ b/Main/Pages/page.css
@@ -112,3 +112,17 @@ section h2 {
 section p {
     margin-top: 10px;
 }
+
+a#codeEditor {
+    display: inline-block;
+    margin: 20px 0;
+    padding: 10px 15px;
+    background: #48AC4C;
+    color: #000000;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+a#codeEditor:hover {
+    background: #57CB5A;
+}
